# DC_env

./: Dockerfile  LICENSE  README.md  baseline_scores.json  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  training_script.py
dataclean/: env.py  tasks.py
server/: app.py
