[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclean_env"
version = "0.1.0"
description = "An OpenEnv-compliant reinforcement learning environment for data cleaning."
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "openai",
    "gradio",
    "huggingface-hub<0.23.0"
]
